Fix dark mode

--- a/style.css
+++ b/style.css
@@ -81,7 +81,6 @@ a:hover{
     position:  absolute;
     top: 100%;
     right: 0;
-    background-color: white;
     width: fit-content;
     max-height: 0;
     overflow: hidden;
@@ -92,7 +91,6 @@ display: block;
 padding: 10px;
 text-align: center;
 font-size: 1.5rem;
-color: black;
 text-decoration: none;
 transition: all 0.3 ease-in-out;
 }
@@ -105,6 +103,19 @@ transition: all 0.3 ease-in-out;
 .darkmode--activated #hamburger-nav span{ 
     background-color: #fff !important;
 }
+.darkmode--activated .menu-links.open{
+    color: #fff !important;
+}
+/* Dark mode etkinleştirildiğinde menu-links stilleri */
+.darkmode--activated .menu-links a {
+    color: #fff !important;
+    background-color: #000000 !important;
+}
+
+.darkmode--activated .menu-links li {
+    border-bottom: 1px solid #000000;
+}
+
 .hamburger-icon.open span:first-child{
 transform: rotate(45deg) translate(10px,5px);
 }
